--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <version>${springsecurity.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${springsecurity.version}</version>
+        </dependency>
+
         <!-- Servlet, JSP and JSTL support -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -67,6 +73,9 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+
+
     </dependencies>
 
 
